[tool.poetry]
name = "epss"
version = "1.0.0"
description = "A client for downloading, quantizing, and analyzing EPSS scores"
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^14.0.2"
requests = "^2.31.0"
click = "^8.1.7"
tqdm = "^4.66.1"
polars = "^0.20.3"

[tool.poetry.scripts]
epss = "epss.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
