[tool.poetry]
name = "epss"
version = "3.0.0"
description = "A client for downloading, quantizing, and analyzing EPSS scores"
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^14.0.2"
requests = "^2.32.2"
click = "^8.1.7"
tqdm = "^4.66.1"
polars = {extras = ["sqlalchemy"], version = "^0.20.7"}
xlsxwriter = "^3.1.9"

[tool.poetry.scripts]
epss = "epss.cli:main"
client = "epss.cli:main"
tool = "epss.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
